<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.xiliulou</groupId>
        <artifactId>xiliulou-parent</artifactId>
        <version>2.1.0</version>
    </parent>
    <artifactId>xiliulou-electricity-cabinet</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <xiliulou.version>2.1.14</xiliulou.version>
        <logback.version>1.2.10</logback.version>
    </properties>

    <dependencies>
        <!--<dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.22</version>
        </dependency>-->
        <dependency>
            <groupId>com.xiliulou</groupId>
            <artifactId>xiliulou-common-core</artifactId>
            <version>${xiliulou.version}</version>
        </dependency>
        <dependency>
            <groupId>com.xiliulou</groupId>
            <artifactId>xiliulou-common-cache</artifactId>
            <version>${xiliulou.version}</version>
        </dependency>

        <dependency>
            <groupId>com.xiliulou</groupId>
            <artifactId>xiliulou-common-datasource</artifactId>
            <version>${xiliulou.version}</version>
        </dependency>
        <dependency>
            <groupId>com.alibaba.cloud</groupId>
            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
        </dependency>
        <!--配置中心客户端-->
        <dependency>
            <groupId>com.alibaba.cloud</groupId>
            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <exclusions>
                <exclusion>
                    <artifactId>spring-boot-starter-logging</artifactId>
                    <groupId>org.springframework.boot</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <!--undertow容器-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-undertow</artifactId>
        </dependency>

        <dependency>
            <groupId>com.xiliulou</groupId>
            <artifactId>xiliulou-common-sentinel</artifactId>
            <version>${xiliulou.version}</version>
        </dependency>

        <dependency>
            <groupId>com.xiliulou</groupId>
            <artifactId>xiliulou-security</artifactId>
            <version>${xiliulou.version}</version>
        </dependency>
        <dependency>
            <groupId>com.xiliulou</groupId>
            <artifactId>xiliulou-common-pay</artifactId>
            <version>${xiliulou.version}</version>
        </dependency>
        <dependency>
            <groupId>com.xiliulou</groupId>
            <artifactId>xiliulou-common-iot-storege</artifactId>
            <version>${xiliulou.version}</version>
        </dependency>
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>transmittable-thread-local</artifactId>
            <version>2.12.0</version>
        </dependency>

        <dependency>
            <groupId>io.micrometer</groupId>
            <artifactId>micrometer-core</artifactId>
            <version>1.6.2</version>
        </dependency>

        <dependency>
            <groupId>io.micrometer</groupId>
            <artifactId>micrometer-registry-prometheus</artifactId>
            <version>1.5.1</version>
        </dependency>

        <dependency>
            <groupId>com.xiliulou</groupId>
            <artifactId>xiliulou-common-clickhouse</artifactId>
            <version>${xiliulou.version}</version>
        </dependency>

        <dependency>
            <artifactId>spring-boot-starter-logging</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.logging.log4j</groupId>
                    <artifactId>log4j-api</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.apache.logging.log4j</groupId>
                    <artifactId>log4j-to-slf4j</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>ch.gos. logback</groupId>
                    <artifactId>logback-classic</artifactId>
                </exclusion>
                <exclusion>
                    <artifactId>logback-classic</artifactId>
                    <groupId>ch.qos.logback</groupId>
                </exclusion>
            </exclusions>
            <groupId>org.springframework.boot</groupId>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>ch.qos.logback</groupId>
                    <artifactId>logback-core</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>${logback.version}</version>
        </dependency>
        <dependency>
            <groupId>com.xiliulou</groupId>
            <artifactId>xiliulou-common-feishu</artifactId>
            <version>${xiliulou.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.xiliulou</groupId>
            <artifactId>xiliulou-common-mq</artifactId>
            <version>${xiliulou.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>com.xiliulou</groupId>
            <artifactId>xiliulou-common-faceid</artifactId>
            <version>${xiliulou.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>com.xiliulou</groupId>
            <artifactId>xiliulou-common-esign</artifactId>
            <version>${xiliulou.version}</version>
            <scope>compile</scope>
        </dependency>
    
        <dependency>
            <groupId>com.github.lianjiatech</groupId>
            <artifactId>retrofit-spring-boot-starter</artifactId>
            <version>2.3.11</version>
        </dependency>
    
        <dependency>
            <groupId>io.dropwizard.metrics</groupId>
            <artifactId>metrics-core</artifactId>
            <version>4.2.23</version>
        </dependency>
        <dependency>
            <groupId>com.xiliulou</groupId>
            <artifactId>xiliulou-common-thirdmall</artifactId>
            <version>${xiliulou.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.xiliulou</groupId>
            <artifactId>xiliulou-common-thirdmall</artifactId>
            <version>${xiliulou.version}</version>
            <scope>compile</scope>
        </dependency>
    
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcprov-jdk15on</artifactId>
            <version>1.69</version>
        </dependency>
    
        <dependency>
            <groupId>com.alipay.sdk</groupId>
            <artifactId>alipay-sdk-java</artifactId>
            <version>4.39.113.ALL</version>
        </dependency>
        
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <executable>true</executable>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <nonFilteredFileExtensions>
                        <nonFilteredFileExtension>xlsx</nonFilteredFileExtension>
                        <nonFilteredFileExtension>xls</nonFilteredFileExtension>
                    </nonFilteredFileExtensions>
                </configuration>
            </plugin>
        </plugins>
    </build>
    
   
</project>
